--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "graphql": "16.8.1",
     "graphql-tools": "9.0.0",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "7.6.1",
+    "mongoose": "7.6.3"
+  },
+  "devDependencies": {
     "nodemon": "3.0.1"
   }
 }
