--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "apollo-server": "3.12.1",
     "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
-    "googleapis": "^129.0.0",
+    "googleapis": "129.0.0",
     "graphql": "16.8.1",
     "graphql-tools": "9.0.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "7.6.3",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "6.9.7",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "9.0.5",
+    "@types/nodemailer": "6.4.14",
     "nodemon": "3.0.1"
   }
 }
