--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.5",
     "@types/nodemailer": "6.4.14",
     "nodemon": "3.0.1"
