--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.5",
+    "@types/morgan": "1.9.9",
     "@types/nodemailer": "6.4.14",
     "nodemon": "3.0.1"
   }
