Add new config for producction

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev ./src/index.ts",
-    "start": "node index.js"
+    "dev": "tsx watch ./src/index.ts",
+    "start": "node ./dist/index.js",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "Joan Corona & Jeyllon Sandoval",
@@ -32,7 +33,9 @@
     "@types/morgan": "1.9.9",
     "@types/nodemailer": "6.4.14",
     "nodemon": "3.0.1",
+    "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
+    "tsx": "4.6.2",
     "typescript": "5.3.3"
   }
 }
