--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "proyecto-ing.software",
+  "name": "api-reelsynth",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js --watch index.js",
+    "dev": "node --watch index.js --env-file=./.env",
     "start": "node index.js"
   },
   "keywords": [],
   "author": "Joan Corona & Jeyllon Sandoval",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "3.12.1",
+    "apollo-server": "3.13.0",
     "bcryptjs": "2.4.3",
-    "dotenv": "16.3.1",
-    "googleapis": "^129.0.0",
+    "dotenv": "16.4.1",
+    "googleapis": "^131.0.0",
     "graphql": "16.8.1",
     "graphql-tools": "9.0.0",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "7.6.3",
-    "nodemailer": "^6.9.7"
-  },
-  "devDependencies": {
-    "nodemon": "3.0.1"
+    "mongoose": "8.1.1",
+    "nodemailer": "^6.9.9"
   }
 }
