--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js --env-file=./.env",
+    "dev": "node --env-file=./.env --watch index.js",
     "start": "node index.js"
   },
   "keywords": [],
